--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "bootstrap": "^4.1.3"
+    "bootstrap": "^4.1.3",
+    "react-router-dom": "^4.3.1",
+    "reactstrap": "^6.3.1"
   }
 }
