--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "bootstrap": "^4.1.3",
+    "jquery": "^3.3.1",
     "react-router-dom": "^4.3.1",
     "reactstrap": "^6.3.1"
   }
