--- a/back-end/package.json
+++ b/back-end/package.json
@@ -14,6 +14,7 @@
     "joi-errors-for-forms": "^0.2.6",
     "mongoose": "^5.1.6",
     "morgan": "~1.9.0",
+    "multer": "^1.3.1",
     "pug": "2.0.0-beta11"
   }
 }
