--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "font-awesome": "^4.7.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "react-swipeable-views": "^0.12.16"
   },
   "scripts": {
     "start": "react-scripts start",
