--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.4",
-    "react-swipeable-views": "^0.12.16"
+    "react-swipeable-views": "^0.12.16",
+    "semantic-ui-css": "^2.3.3",
+    "semantic-ui-react": "^0.82.2"
   },
   "scripts": {
     "start": "react-scripts start",
