--- a/back-end/package.json
+++ b/back-end/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^5.1.6",
     "morgan": "~1.9.0",
     "multer": "^1.3.1",
+    "nodemailer": "^4.6.7",
     "pug": "2.0.0-beta11"
   }
 }
