--- a/back-end/package.json
+++ b/back-end/package.json
@@ -16,6 +16,7 @@
     "http-errors": "~1.6.2",
     "joi": "^13.5.2",
     "joi-errors-for-forms": "^0.2.6",
+    "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.1.6",
     "morgan": "~1.9.0",
     "multer": "^1.3.1",
