--- a/back-end/package.json
+++ b/back-end/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.4",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
     "joi": "^13.5.2",
     "joi-errors-for-forms": "^0.2.6",
@@ -17,6 +18,8 @@
     "morgan": "~1.9.0",
     "multer": "^1.3.1",
     "nodemailer": "^4.6.7",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11"
   }
 }
