--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^1.4.3",
     "@material-ui/icons": "^2.0.1",
+    "axios": "^0.18.0",
     "font-awesome": "^4.7.0",
     "npm": "^6.3.0",
     "react": "^16.4.2",
