--- a/back-end/package.json
+++ b/back-end/package.json
@@ -22,6 +22,7 @@
     "multer": "^1.3.1",
     "nodemailer": "^4.6.7",
     "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11"
   }
