--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^5.1.6",
     "morgan": "~1.9.0",
     "multer": "^1.3.1",
+    "nodemon": "^1.18.3",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11"
