renamed my package.json: not checked if it affects anything

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nmdb",
-  "version": "0.0.0",
+  "name": "flixia",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "nodemon ./bin/www"
