--- a/package.json
+++ b/package.json
@@ -1,30 +1,20 @@
 {
-  "name": "flixia",
+  "name": "nmdb",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
-    "bcrypt": "^3.0.0",
-    "bcrypt-nodejs": "0.0.3",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
     "debug": "~2.6.9",
     "express": "~4.16.0",
-    "express-session": "^1.15.6",
-    "http-errors": "^1.6.3",
+    "http-errors": "~1.6.2",
     "joi": "^13.5.2",
     "joi-errors-for-forms": "^0.2.6",
-    "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.1.6",
     "morgan": "~1.9.0",
-    "multer": "^1.3.1",
-    "nodemon": "^1.18.3",
-    "passport": "^0.4.0",
-    "nodemailer": "^4.6.7",
-    "passport-facebook": "^2.1.1",
-    "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11"
   }
 }
