--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "async": "^2.6.1",
     "bcrypt": "^3.0.0",
     "bcrypt-nodejs": "0.0.3",
     "cloudinary": "^1.11.0",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
+    "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "dotenv": "^6.0.0",
     "express": "~4.16.0",
